Completed the styling for landing page

--- a/index.html
+++ b/index.html
@@ -51,20 +51,24 @@
     </div>
 
     <div class="body-two">
+        <div class="quote-container">
         <div class="quote">Eric Cartman, the man, the myth, the legend. He has faught demons, foreign invaders, monkeys, guinea pigs, kyle, butters, and many more! Also watch out for the mysterious stoner named towlie!</div>
         <div class="author">Eric Cartman, god of tv</div>
+        </div>
     </div>
 
     <div class="body-three">
         <div class="call-to-action">
-            <div class="c2a-title">Call to action! It's time!</div>
-            <div class="subtext">Sign up for south park and have a phat laugh</div>
-            <button>Sign Up</button>
+            <div class="c2a-left">
+                <div class="c2a-title">Call to action! It's time!</div>
+                <div class="subtext">Sign up for south park and have a phat laugh</div>
+            </div>
+                <button class="button2">Sign Up</button>
         </div>
     </div>
 
     <div class="footer">
-        <div class="footer-text">Copyright @ Eric Cartman 2022</div>
+        Copyright @ Eric Cartman 2022
     </div>
 </body>
 </html>
